--- a/referent_introduction_annotation_guidelines.html
+++ b/referent_introduction_annotation_guidelines.html
@@ -1596,7 +1596,7 @@ div.tocify {
 <p>Annotated on tier <code>norm[r-type]</code> in ExMARALDA</p>
 </blockquote>
 <p>We use the ReFlex annotation scheme to give each new referent a referential label. The original ReFlex paper can be found at <a href="https://elib.uni-stuttgart.de/handle/11682/9028" class="uri">https://elib.uni-stuttgart.de/handle/11682/9028</a>.</p>
-<p>We use the following 10 labels:</p>
+<p>We use the following 11 labels:</p>
 <table>
 <thead>
 <tr class="header">
@@ -2173,9 +2173,9 @@ div.tocify {
 <p>If multiple r-types apply, choose the highest ranking r-type in the r-type hierarchy:</p>
 <p><code>g(d) &gt; bc &gt; b(d) &gt; u &gt; n</code></p>
 <blockquote>
-<p>The driver <code>driver2</code> <code>b</code> who was behind the guy <code>driver1</code> <code>bc</code> in the blue car <code>car1</code> <code>g</code></p>
+<p>The driver <code>driver2</code> <code>u</code> who was behind the guy <code>driver1</code> <code>bc</code> in the blue car <code>car1</code> <code>g</code> was forced to stop suddenly.</p>
 </blockquote>
-<p>Both <code>bc</code> and <code>u</code> apply to <code>driver2</code>, but <code>bc</code> ranks higher.</p>
+<p>Both <code>bc</code> and <code>u</code> apply to <code>driver1</code>, but <code>bc</code> ranks higher.</p>
 </div>
 <div id="new-vs-unused-unknown" class="section level3">
 <h3>3.2.2 New vs Unused Unknown</h3>
@@ -2234,7 +2234,7 @@ Phrase types:
 <blockquote>
 <p>The man who was holding the ball <code>g</code> and talking to a woman dropped it.</p>
 </blockquote>
-<p>Explanation: “who was holding the ball”</p>
+<p>Explanation: “who was holding the ball and talking to a woman”</p>
 <p>“the ball”: <code>g</code></p>
 <p>“a woman”: <code>n</code></p>
 <p>Explanation contains a given referent. Tag “the man” as <code>u</code>.</p>
